--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,33 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.magicContainer {
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+}
+
+h2 {
+  text-align: center;
+  font-size: 30px;
+}
+
+p {
+  color: gray;
+}
+
+.magicButton {
+  margin-top: 50px;
+  height: 50px;
+  width: 100px;
+}
+
+.button-row {
+  margin-top: 25px;
+  height: 50px;
+  width: 130px;
+}
