--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,11 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+.linkStyle {
+  position: absolute;
+  right: 0;
+}
+
 a {
   color: inherit;
   text-decoration: none;
